unpackaged/main/default/objects/fferpcore__DataTransformationTable__c/fferpcore__DataTransformationTable__c.object-meta.xml
<CustomObject>
    <customHelpPage>fferpcore__DataTransformationTableHelp</customHelpPage>
    <description>Master object in the Data Transformation Table hierarchy.  Used to transform incoming Message Delivery source data into Subscriber target data.</description>
    <label>Data Transformation Table</label>
    <nameField>
        <label>Data Transformation Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Transformation Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>