unpackaged/main/default/objects/fferpcore__DataTransformationTable__c/fields/fferpcore__Description__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Description__c</fullName>
    <description>Description of this Data Transformation Table</description>
    <inlineHelpText>Description of this Data Transformation Table</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>