unpackaged/main/default/objects/fferpcore__DataTransformationTable__c/fields/fferpcore__DTT_Number__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__DTT_Number__c</fullName>
    <displayFormat>DTT-{00000}</displayFormat>
    <label>Data Transformation Table Number</label>
    <type>AutoNumber</type>
</CustomField>