unpackaged/main/default/objects/fferpcore__DataTransformationTable__c/fields/fferpcore__RequiredSourceValues__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__RequiredSourceValues__c</fullName>
    <label>Required Source Values</label>
    <summarizedField>fferpcore__DataTransformation__c.fferpcore__RequiredSourceValues__c</summarizedField>
    <summaryForeignKey>fferpcore__DataTransformation__c.fferpcore__DataTransformationTable__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>